SONARHTML-291 Fix SonarQube issues